dataset1235/2025-2/2318198438/users/1225947802/executions/2601575092_1964285824.log
== SUBMISSION (2025-08-15 22:48:12)
-- CODE: 
print("Adicao: ", 5 + 3)
print()
print("Subtracao: ", 10 - 2)
print()
print("Multiplicacao: ", 4*2)
print()
print("Divisao: ", 16/2)
print()
print("Resto: ", 8)
print()
print("Potenciacao: ", 2**3)
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:41:42)
-- CODE: 
print("Adicao: ", 5 + 3)
print(Adicao)
print("Subtracao: ", 10 - 2)
print(Subtracao)
print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:42:55)
-- CODE: 
print("Adicao: ", 5 + 3)
print(Adicao)
print("Subtracao: ", 10 - 2)
print(Subtracao)
print("Multiplicacao: ", 4 * 2)
print(Multiplicacao)
print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:42:42)
-- CODE: 
print("Adicao: ", 5 + 3)
print(Adicao)
print("Subtracao: ", 10 - 2)
print(Subtracao)
print("Multiplicacao: ", 4*2)
print(Multiplicacao)
print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:41:29)
-- CODE: 
print("Adicao: ", 5 + 3)
print(Adicao)
print("Subtracao: ", 10-2)
print(Subtracao)
print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:41:40)
-- CODE: 
print("Adicao: ", 5 + 3)
print(Adicao)
print("Subtracao: ", 10 - 2)
print(Subtracao)
print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:44:20)
-- CODE: 
print("Adicao: ", 5 + 3)
print(Adicao)
print("Subtracao: ", 10 - 2)
print(Subtracao)
print("Multiplicacao: ", 4*2)
print(Multiplicacao)
print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:41:41)
-- CODE: 
print("Adicao: ", 5 + 3)
print(Adicao)
print("Subtracao: ", 10 - 2)
print(Subtracao)
print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:45:20)
-- CODE: 
print("Adicao: ", 5 + 3)
print()
print("Subtracao: ", 10 - 2)
print()
print("Multiplicacao: ", 4*2)
print()
print("Divisao: ", 16/2)
print()
print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:48:02)
-- CODE: 
print("Adicao: ", 5 + 3)
print()
print("Subtracao: ", 10 - 2)
print()
print("Multiplicacao: ", 4*2)
print()
print("Divisao: ", 16/2)
print()
print("Resto: ", 8)
print()
print("Potenciacao: ", 2**3)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:47:39)
-- CODE: 
print("Adicao: ", 5 + 3)
print()
print("Subtracao: ", 10 - 2)
print()
print("Multiplicacao: ", 4*2)
print()
print("Divisao: ", 16/2)
print()
print("Resto: ", ...)

print("Potenciacao: ", 2**3)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:44:41)
-- CODE: 
print("Adicao: ", 5 + 3)
print()
print("Subtracao: ", 10 - 2)
print()
print("Multiplicacao: ", 4*2)
print(Multiplicacao)
print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(Multiplicacao)
          ^^^^^^^^^^^^^
NameError: name 'Multiplicacao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(Multiplicacao)
          ^^^^^^^^^^^^^
NameError: name 'Multiplicacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:44:29)
-- CODE: 
print("Adicao: ", 5 + 3)
print()
print("Subtracao: ", 10 - 2)
print(Subtracao)
print("Multiplicacao: ", 4*2)
print(Multiplicacao)
print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Subtracao)
          ^^^^^^^^^
NameError: name 'Subtracao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Subtracao)
          ^^^^^^^^^
NameError: name 'Subtracao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:44:21)
-- CODE: 
print("Adicao: ", 5 + 3)
print(Adicao)
print("Subtracao: ", 10 - 2)
print(Subtracao)
print("Multiplicacao: ", 4*2)
print(Multiplicacao)
print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:40:03)
-- CODE: 
print("Adicao: ", 5 + 3)
print(Adicao)
print("Subtracao: ", ...)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Adicao)
          ^^^^^^
NameError: name 'Adicao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 22:44:51)
-- CODE: 
print("Adicao: ", 5 + 3)
print()
print("Subtracao: ", 10 - 2)
print()
print("Multiplicacao: ", 4*2)
print()
print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
